# evo2-metal

./: .gitignore  LICENSE  README.md  pyproject.toml
evo2_metal/: __init__.py  flash_attention.metal  flash_attention_metal.py  patch.py
examples/: generate_dna.py  score_sequences.py
tests/: test_full.py
